gcc-14.2.0/gcc/testsuite/gdc.test/runnable/property.d
version https://git-lfs.github.com/spec/v1
oid sha256:d1b3eb7774bd4770f7abc29314f5831d5ad108410115eac374dfe3d2ed8c0618
size 676
